[package]
name = "router-fix"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net-route = "0.4.4"
futures = "0.3.30"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
arg = "0.4.1"
local-ip-address = "0.6.2"
chrono = "0.4.38"
